# polarityjam-napari-plugin

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/jat/: __init__.py  __main__.py  startup.py
src/jat/model/: signals.py  tasks.py
src/jat/ui/: napari_jat_plugin.py
src/polarityjam/napari_plugin/: __init__.py  __main__.py  argument_parsing.py  startup.py
src/polarityjam/napari_plugin/model/: tasks.py
src/polarityjam/napari_plugin/ui/: napari_pjam_plugin.py
