[metadata]
name = polarityjam-jat
version = 0.1.0
description = junction annotation tool
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://www.polarityjam.com
author = Jan Philipp Albrecht, Wolfgang Giese
maintainer = Jan Philipp Albrecht, Wolfgang Giese
maintainer_email = j.p.albrecht@fu-berlin.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = vascular cell, imaging, data analysis
project_urls =
    Source=https://github.com/polarityjam/junction-annotator.git
    Tracker=https://github.com/polarityjam/junction-annotator.git/issues

[options]
package_dir =
    =src
include_package_data=True
packages = find_namespace:
install_requires =
    polarityjam==0.2.0
    napari[all]

python_requires = ~=3.8

[options.packages.find]
where = src

[options.package_data]
YML = src/*.yml
CSV = src/*.csv
JSON = src/*.json

[options.entry_points]
console_scripts =
    jat=jat.__main__:main

[flake8]
max-line-length = 120
