[metadata]
name = polarityjam-napari-plugin
version = 0.2.0
description = polarityjam napari plugin
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://www.polarityjam.com
author = Jan Philipp Albrecht, Wolfgang Giese
maintainer = Jan Philipp Albrecht, Wolfgang Giese
maintainer_email = j.p.albrecht@fu-berlin.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = vascular cell, imaging, data analysis
project_urls =
    Source=https://github.com/polarityjam/polarityjam-napari-plugin.git
    Tracker=https://github.com/polarityjam/polarityjam-napari-plugin.git/issues

[options]
package_dir =
    =src
include_package_data=True
packages = find_namespace:
install_requires =
    polarityjam>=0.3.0<0.4.0
    napari[all]

python_requires = ~=3.8

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.sh, *.sql, *.json, *.png, *.ico, *.icns, *.svg, *.yml, *.csv


[options.entry_points]
console_parsers_polarityjam =
    napari=polarityjam.napari_plugin.argument_parsing:create_parser_napari

[flake8]
max-line-length = 120
